// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NotificationBellIcon renders when the drawer is closed and there are new notifications 1`] = `
<span
  className="c-notification-bell-icon c-notification-bell-icon--closed c-notification-bell-icon--unread"
  dangerouslySetInnerHTML={
    {
      "__html": "<svg/>",
    }
  }
/>
`;

exports[`NotificationBellIcon renders when the drawer is closed and there are not new notifications 1`] = `
<span
  className="c-notification-bell-icon c-notification-bell-icon--closed c-notification-bell-icon--read"
  dangerouslySetInnerHTML={
    {
      "__html": "<svg/>",
    }
  }
/>
`;

exports[`NotificationBellIcon renders when the drawer is open and there are new notifications 1`] = `
<span
  className="c-notification-bell-icon c-notification-bell-icon--open c-notification-bell-icon--unread"
  dangerouslySetInnerHTML={
    {
      "__html": "<svg/>",
    }
  }
/>
`;

exports[`NotificationBellIcon renders when the drawer is open and there are not new notifications 1`] = `
<span
  className="c-notification-bell-icon c-notification-bell-icon--open c-notification-bell-icon--read"
  dangerouslySetInnerHTML={
    {
      "__html": "<svg/>",
    }
  }
/>
`;

exports[`NotificationBellIcon renders when there are new detour notifications and user is not part of DetoursList 1`] = `
<span
  className="c-notification-bell-icon c-notification-bell-icon--closed c-notification-bell-icon--read"
  dangerouslySetInnerHTML={
    {
      "__html": "<svg/>",
    }
  }
/>
`;

exports[`NotificationBellIcon renders when there are new detour notifications and user is part of DetoursList group 1`] = `
<span
  className="c-notification-bell-icon c-notification-bell-icon--closed c-notification-bell-icon--unread"
  dangerouslySetInnerHTML={
    {
      "__html": "<svg/>",
    }
  }
/>
`;
